Fix searchbar, add spacing between TOC and lesson menu

--- a/quarto/qfc_styles.css
+++ b/quarto/qfc_styles.css
@@ -208,6 +208,12 @@
   }
 }
 
+/* add a bit of spacing between TOC and lesson menu
+nav.toc-active
+{
+  margin-bottom: 20px;
+}
+
 /* links outside of content page */
 a:hover
 {
